我是a提交的内容，修改了one.html和添加了list.html

--- a/html/list.html
+++ b/html/list.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <div>one第三次修改</div>
-    <div>nihao</div>
-    <div>woshitwo</div>
+    <div>我是工作人员a</div>
 </body>
 
 </html>
